2003-07-30  Ben Elliston  <bje@wasabisystems.com>

	* doc/runtest.1: Replace "TCL" with "Tcl".
	Make last revision date current.

2003-07-29  Ben Elliston  <bje@wasabisystems.com>

	* doc/overview.sgml: Replace "NT" with "Windows", correct Cygwin
	URLs and other stylistic improvements.
	* doc/ref.sgml: Likewise.
	* doc/user.sgml: Likewise.

2003-07-25  Mike Stump  <mrs@apple.com>

	* lib/target.exp (prune_warnings): Handle "nfs server .* not
	responding" and "nfs server .* is alive again".

2003-07-20  Ben Elliston  <bje@wasabisystems.com>

	* config.guess: Update to most recent version.
	* config.sub: Ditto.
	* AUTHORS: Add self to list of maintainers.

2003-07-25  Jim Dein  <jdein@deinji5.apple.com>

         * lib/utils.exp: fix double recursion bug in proc find.

2002-02-25  Jackie Smith Cashion  <jsmith@redhat.com>

        * baseboards/am33_2.0-libremote.exp: New file.

2000-11-21  Drew Moseley  <dmoseley@redhat.com>

        * baseboards/mn10300-cygmon.exp: Use the am33-2 flag for the
        ASB2303 board.

2000-08-10  Drew Moseley  <dmoseley@cygnus.com>

        * baseboards/mn10300-cygmon.exp: Added support for Cygmon based
	ASB2303 board.

2003-06-13  Phil Edwards <pme@devphil.com>

	* baseboards/mips64-sim.exp, baseboards/mips-sim.exp,
	baseboards/mips-sim-idt32.exp, baseboards/mips-sim-idt64.exp: Use
	only -T[linker] instead of -Wl,-T[linker].
	
2003-06-13  Jason Thorpe  <thorpej@wasabisystems.com>

	* lib/target.exp (prune_warnings): Add two more linker
	warning patterns for warnings generated by modern verions
	of NetBSD.

2003-05-12  H.J. Lu <hongjiu.lu@intel.com>

        * lib/libgloss.exp (build_wrapper): Add -Wl,-wrap,_exit.

2003-05-09  H.J. Lu <hongjiu.lu@intel.com>

        * runtest: Fix a typo.

2003-05-03  Nitin Dhavale <nitinpdhavale@indiatimes.com>

	* doc/user.sgml: Clarify how to set the verbose option.

2003-03-28 Chris Demetriou <cgd@broadcom.com>

        * lib/framework.exp (check_conditional_xfail): Adjust so that