@@ -1,3 +1,7 @@
+2003-08-06  Ben Elliston  <bje@wasabisystems.com>
+
+	* lib/remote.exp: Replace "TCL" with "Tcl".
+
 2003-07-30  Ben Elliston  <bje@wasabisystems.com>
 
 	* doc/runtest.1: Replace "TCL" with "Tcl".
